--- a/src/components/Home/Hero/Hero.css
+++ b/src/components/Home/Hero/Hero.css
@@ -9,7 +9,8 @@
 }
 
 .hero__title {
-  margin: 35px 0;
+  padding: 10px;
+  margin: 10px 0;
   color: var(--todo-white-color);
   text-shadow: -185px -36px 250px #ff0099, 217px 135px 213px #ff0099ab;
   font-weight: 600;
@@ -24,13 +25,11 @@
 }
 
 .hero__text {
-  font-size: 20px;
   margin: 30px 0;
   color: var(--todo-white-smoke);
 }
 
 .hero__btn {
-
   font-size: 20px;
   border-radius: 15px;
   font-weight: 600;
@@ -38,4 +37,12 @@
   width: 224px;
   height: 80px;
   background-color: var(--todo-white-color);
+}
+
+.hero__btn:hover {
+  cursor: pointer;
+  transition: 250ms;
+  border: 1px solid var(--todo-white-color);
+  background: none;
+  color: var(--todo-white-color);
 }
