--- a/src/components/Todo/TodoAdd/TodoAdd.css
+++ b/src/components/Todo/TodoAdd/TodoAdd.css
@@ -4,8 +4,9 @@
   color: var(--todo-white-color);
   background-color: var(--todo-pink-color);
   font-size: 25px;
-  margin: 20px 0;
+  margin: 0 20px;
   height: 50px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   width: 50px;
+  cursor: pointer;
 }
